# volentscript

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  NEXT_STEPS.md  P27B_MEASUREMENT.md  README.md  SPECS.md  links.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: REPORT.md  report.html  report_gen.py  run.sh
benchmarks/binarytrees/: binarytrees.c  binarytrees.go  binarytrees.java  binarytrees.js  binarytrees.rs  binarytrees.vlt
benchmarks/fib/: fib.c  fib.go  fib.java  fib.js  fib.rs  fib.vlt
benchmarks/mandelbrot/: mandelbrot.c  mandelbrot.go  mandelbrot.java  mandelbrot.js  mandelbrot.rs  mandelbrot.vlt
benchmarks/nbody/: nbody.c  nbody.go  nbody.java  nbody.js  nbody.rs  nbody.vlt
benchmarks/reports/: 2026-07-08-p21-baseline.html  2026-07-08-p22.html  2026-07-08-p22.json  2026-07-08-p22.md  2026-07-08-p23.md  2026-07-08-p24.html  2026-07-08-p25.md  2026-07-08-p27a.json  2026-07-08-p28.html  2026-07-08-p28.json  2026-07-08.html  2026-07-08.json  2026-07-08.md  2026-07-09-p29.md  2026-07-09.html  2026-07-09.json  README.md
benchmarks/results/: binarytrees.json  fib.json  mandelbrot.json  nbody.json  spectralnorm.json  strings.json
benchmarks/spectralnorm/: spectralnorm.c  spectralnorm.go  spectralnorm.java  spectralnorm.js  spectralnorm.rs  spectralnorm.vlt
benchmarks/strings/: strings.c  strings.go  strings.java  strings.js  strings.rs  strings.vlt
crates/ast/: Cargo.toml
crates/ast/src/: dump.rs  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: lib.rs  llvm.rs
crates/diagnostics/: Cargo.toml
crates/diagnostics/src/: lib.rs
crates/driver/: Cargo.toml
crates/driver/src/: lib.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs  scan.rs  token.rs
crates/mir/: Cargo.toml
crates/mir/src/: bce.rs  lib.rs  lower.rs
crates/parser/: Cargo.toml
crates/parser/src/: expr.rs  lib.rs  stmt.rs
crates/parser/tests/: snapshots.rs
crates/parser/tests/programs/: core.as  core.ast  errors.as  errors.diag
crates/runtime/: Cargo.toml
crates/runtime/src/: any.rs  closure.rs  conv.rs  date.rs  exc.rs  ffi.rs  gc.rs  lib.rs  namespace.rs  natives.rs  object.rs  regexp.rs  seq.rs  socket.rs  string.rs  winjmp.rs
crates/sema/: Cargo.toml
crates/sema/src/: builtins.rs  classes.rs  lib.rs  tast.rs  tdump.rs  ty.rs
crates/sema/src/check/: collections.rs  decl.rs  expr.rs  expr_class.rs  mod.rs  null.rs
crates/sema/tests/: snapshots.rs
crates/sema/tests/programs/: errors.as  errors.diag  nulls.as  nulls.diag  nulls.vlt  oop_errors.diag  oop_errors.vlt  typing.as  typing.tast  typing.vlt
crates/span/: Cargo.toml
crates/span/src/: lib.rs
docs/: SOURCES.md
examples/: README.md
examples/calc/: main.vlt
examples/chat/: client.vlt  server.vlt
examples/httpd/: main.vlt
examples/httpd/public/: index.html
examples/life/: main.vlt
examples/logstats/: main.vlt
examples/mail/: send.vlt  smtpd.vlt
examples/todo/: main.vlt
examples/vgrep/: main.vlt
notes/: perf-d0-findings.md
tests/: Cargo.toml  showcase.as  showcase.vlt
tests/programs/: any.out  any.vlt  bce.out  bce.vlt  closures  closures.as  closures.out  control.out  control.vlt  date.as  date.out  echo_client.vlt  echo_server.vlt  fib.out  fib.vlt  fileio.out  fileio.vlt  gcchurn.out  gcchurn.vlt  gcgen.out  gcgen.vlt  generics  generics.out  generics.vlt  hello  modconst.out  modconst.vlt  namespaces.as  namespaces.out  nsvalues.as  nsvalues.out  numbers  numbers.as  numbers.out  oop  oop.as  oop.out  oop.vlt  regex.out  regex.vlt  (+8 more)
tests/src/: lib.rs
tests/tests/: examples.rs  golden.rs
