# The language name appears as a literal only here (crate/binary name, help
# strings), in the README, and in the SPECS.md header (SPECS §12).
[package]
name = "vigorscript"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "VigorScript compiler CLI"

[[bin]]
name = "vigorscript"
path = "src/main.rs"

[dependencies]
driver.workspace = true
diagnostics.workspace = true
clap.workspace = true

[lints]
workspace = true
