[package]
name = "runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Native runtime library, statically linked into produced binaries"

[lib]
crate-type = ["staticlib", "rlib"]

[lints]
workspace = true

[dependencies]
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
fancy-regex = "0.18.0"
