[package]
name = "sema"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Name resolution, type checking, coercion insertion"

[dependencies]
span.workspace = true
diagnostics.workspace = true
ast.workspace = true

[lints]
workspace = true
